         (Sergio Baldovi).
20101129 ChangeLog,README,doc/libspectrum.{3,txt}: more 1.0 updates.
20101130 warajevo_read.c: remove potential signedness problem.
20101130 Makefile.am,configure.in: bump version numbers for 1.0 release.
20101216 README,configure.in,doc/libspectrum.3: bump version numbers and dates
         for 1.0.0 release.
20101216 ChangeLog: update date here as well.
20101216 test/Makefile.am: ensure all test files are distributed.
20101217 Makefile.am: mark windres.rc as a source file so it is distributed
         (thanks, Guesser).
20110120 make-perl.c,myglib/ghash.c: add the g_hash_table_foreach() function and
         update g_hash_table_new() function to support the
         g_hash_table_new( NULL, NULL ) syntax (patch #3160211) (Sergio
         Baldovi).
20110130 accessor.pl,doc/libspectrum.txt,snap_accessors.txt,snapshot.c,szx.c:
         add support for SpecDrum in SZX snapshots (patch #3164313) (Jon
         Mitchell).
20110131 sna.c,z80.c: note info loss of SpecDrum info when writing sna or z80
         format snapshots (Fred).
20110327 configure.in: allow the user to say they do not want to use windres
         (works around bug #3248008; thanks, Cygnus).
20110405 libspectrum.h.in: add missing WIN32_DLL (Stuart).
20110407 accessor.pl,snap_accessors.txt,snapshot.c,szx.c: add support for Beta
         128 interface autoboot setting in SZX snapshots (Fred).
20110422 tape_block.c: ROM block duration didn't take into account pilot and
         sync pulses (Fred).
20110422 tape.c: don't expect an edge for a jump, group start/end, loop
         start/end or other non-audio blocks (Fred).
20110427 Makefile.am,internals.h,tap.c,tape_block.c,tzx_read.c,utilities.c,
         warajevo_read.c: centralise ms/tstate conversions and tape block pause
         setting functions (Fred).
20110427 tzx_read.c,tzx_write.c,warajevo_read.c,wav.c: complete centralisation
         of tape block pause setting functions (Fred).